--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       <script src="p5.js"></script>
       <script src="p5.play.js"></script>
 
-      <script src="sketch.js"></script>
+      
 
     </head>
     <body>
+      <script src="project 22.js"></script>
     </body>
   </html>
